# Picophonica

./: .gitmodules  CMakeLists.txt  README.md  config.h  main.c
inc/: pico_synth_ex.c  pico_synth_ex_presets.h  pico_synth_ex_tables.h
